@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-28T16:22:50Z",
-  "count_outdated" : 357,
-  "uniques_outdated" : 204,
-  "count" : 383,
-  "uniques" : 221,
+  "timestamp" : "2022-06-29T01:19:29Z",
+  "count_outdated" : 362,
+  "uniques_outdated" : 207,
+  "count" : 385,
+  "uniques" : 222,
   "clones" : [
-    {
-      "timestamp": "2022-06-14T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 5 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 3 ]
-    },
     {
       "timestamp": "2022-06-15T00:00:00Z",
       "count": 1,
