@@ -1,12 +1,7 @@
 {
-  "count": 26,
-  "uniques": 4,
+  "count": 23,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2022-06-14T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-06-15T00:00:00Z",
       "count": 1,
